added separate reward function

--- a/SAC_linux.ipynb
+++ b/SAC_linux.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "import pywinctl as gw\n",
     "import vgamepad as vg\n",
     "import gymnasium as gym\n",
+    "from gymnasium import spaces\n",
     "from stable_baselines3 import SAC\n",
     "from stable_baselines3.common.vec_env import DummyVecEnv\n",
     "from stable_baselines3.common.callbacks import BaseCallback, EvalCallback, CheckpointCallback\n",
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +423,20 @@
       "Attempting to connect to localhost:9000 (Attempt 1/5)...\n",
       "Connection refused. Retrying in 1 second...\n",
       "Attempting to connect to localhost:9000 (Attempt 2/5)...\n",
-      "Connected successfully!\n"
+      "Connected successfully!\n",
+      "Connection error: [Errno 104] Connection reset by peer\n",
+      "Connection lost, attempting to reconnect...\n",
+      "Attempting to connect to localhost:9000 (Attempt 1/5)...\n",
+      "Connection refused. Retrying in 1 second...\n",
+      "Attempting to connect to localhost:9000 (Attempt 2/5)...\n",
+      "Connection refused. Retrying in 1 second...\n",
+      "Attempting to connect to localhost:9000 (Attempt 3/5)...\n",
+      "Connection refused. Retrying in 1 second...\n",
+      "Attempting to connect to localhost:9000 (Attempt 4/5)...\n",
+      "Connection refused. Retrying in 1 second...\n",
+      "Attempting to connect to localhost:9000 (Attempt 5/5)...\n",
+      "Connection refused. Retrying in 1 second...\n",
+      "Max reconnection attempts reached. Stopping reconnection attempts.\n"
      ]
     }
    ],
